Nimalan/Mani: refactor: extract common logic of Makefiles

--- a/machsuite-posit-rewrite/machsuite-fft-strided/Makefile
+++ b/machsuite-posit-rewrite/machsuite-fft-strided/Makefile
@@ -1,17 +1,24 @@
-convert-data:
-	$(F2PConvertor) fft.fuse.double.json rel > fft.fuse.posit_1.json 
-	$(F2PConvertor) fft.fuse.posit_1.json img > fft.fuse.posit.json 
-	$(F2PConvertor) fft.fuse.posit.json img_twid > fft.fuse.posit_1.json 
-	$(F2PConvertor) fft.fuse.posit_1.json rel_twid > fft.fuse.posit.json
+F2PConvertor=../../utilities/cpp/build/f2p_convertor
+P2FConvertor=../../utilities/cpp/build/p2f_convertor
 
-convert-expect:
-	$(F2PConvertor) fft.expect.double.json rel > fft.expect.posit_1.json 
-	$(F2PConvertor) fft.expect.posit_1.json img > fft.expect.posit.json 
-	$(F2PConvertor) fft.expect.posit.json img_twid > fft.expect.posit_1.json 
-	$(F2PConvertor) fft.expect.posit_1.json rel_twid > fft.expect.posit.json
+all: parse run convert-p2f-actual
 
-convert-p2f-expect:
-	$(P2FConvertor) fft.out.json rel > fft.out_1.json 
-	$(P2FConvertor) fft.out_1.json img > fft.out.json 
-	$(P2FConvertor) fft.out.json img_twid > fft.out_1.json 
-	$(P2FConvertor) fft.out_1.json rel_twid > fft.out.json
+%.futil: %.fuse
+	fuse $< --lower -b calyx -o $@
+
+convert-input:
+	$(F2PConvertor) fft.in.double.json 32 --1d rel,img,img_twid,rel_twid > fft.in.posit.json
+
+convert-p2f-actual:
+	$(P2FConvertor) fft.out.posit.json 32 --1d rel,img,img_twid,rel_twid > fft.out.double.json
+
+parse: check.data input.data
+	node parse.js
+
+run: fft.futil convert-input
+	fud e --to dat $< -s verilog.data fft.in.posit.json --through verilog > fft.out.posit.json
+
+clean:
+	rm *.json fft.futil *.jpg
+
+.PHONY=parse clean convert-input convert-p2f-actual
