--- a/machsuite-posit-rewrite/machsuite-spmv-crs/Makefile
+++ b/machsuite-posit-rewrite/machsuite-spmv-crs/Makefile
@@ -1,30 +1,27 @@
-F2PConvertor=~/Documents/opensource/personal/hardposit-chisel3/test_generator/build/PositConvertor
-P2FConvertor=~/Documents/opensource/personal/hardposit-chisel3/test_generator/build/P2FConvertor
+F2PConvertor=../../utilities/cpp/build/f2p_convertor
+P2FConvertor=../../utilities/cpp/build/p2f_convertor
 
-all: convert-data convert-expect
+all: parse run convert-p2f-actual
+
+%.futil: %.fuse
+	fuse $< --lower -b calyx -o $@
+
+convert-input:
+	$(F2PConvertor) spmv.in.double.json 32 --1d val,vec,out > spmv.in.posit.json
+
+convert-p2f-actual:
+	$(P2FConvertor) spmv.out.posit.json 32 --1d out > spmv.out.double.json
 
 parse: check.data input.data
 	node parse.js
 
-convert-data: spmv.in.double.json
-	$(F2PConvertor) spmv.in.double.json val > spmv.in.posit_1.json 
-	$(F2PConvertor) spmv.in.posit_1.json vec > spmv.in.posit.json
-	$(F2PConvertor) spmv.in.posit.json out > spmv.in.posit_1.json
-	mv spmv.in.posit_1.json spmv.in.posit.json
+run: spmv.futil convert-input
+	fud e --to dat $< -s verilog.data spmv.in.posit.json --through verilog > spmv.out.posit.json
 
-convert-expect: spmv.expect.double.json
-	$(F2PConvertor) spmv.expect.double.json out > spmv.expect.posit.json 
+clean:
+	rm *.json spmv.futil *.jpg
 
-convert-p2f-actual: spmv.out.posit.json
-	$(P2FConvertor) spmv.out.posit.json val > spmv.out.double_1.json 
-	$(P2FConvertor) spmv.out.double_1.json vec > spmv.out.double.json
-	$(P2FConvertor) spmv.out.double.json out > spmv.out.double_1.json
-	mv spmv.out.double_1.json spmv.out.double.json
-
-run:
-	fud e --to dat spmv.fuse -s verilog.data spmv.in.posit.json --through verilog > spmv.out.posit.json
+.PHONY=parse clean convert-input convert-p2f-actual
 
 # plot:
 # 	python plot.py
-
-benchmark: parse convert-data convert-expect run # plot
