--- a/machsuite-posit-rewrite/machsuite-spmv-ellpack/Makefile
+++ b/machsuite-posit-rewrite/machsuite-spmv-ellpack/Makefile
@@ -18,10 +18,10 @@ parse: check.data input.data
 run: spmv.futil convert-input
 	fud e --to dat $< -s verilog.data spmv.in.posit.json --through verilog > spmv.out.posit.json
 
+plot:
+	python plot.py
+
 clean:
 	rm *.json spmv.futil *.jpg
 
 .PHONY=parse clean convert-input convert-p2f-actual
-
-# plot:
-# 	python plot.py
